--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.example.mangamagum">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,10 +12,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.Reading"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".Activity.Chosen_manga" android:screenOrientation="portrait" />
-        <activity android:name=".Activity.Library" android:screenOrientation="portrait">
+        <activity android:name=".Activity.Favorites"></activity>
+        <activity
+            android:name=".Activity.Reading"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activity.Chosen_manga"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activity.Library"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
