--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,4 +29,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.google.firebase:firebase-core:16.0.7'
+    implementation 'com.google.firebase:firebase-database:16.0.6'
 }
+
+apply plugin: 'com.google.gms.google-services'
